k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parth-nextjs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: parth-nextjs-app
  template:
    metadata:
      labels:
        app: parth-nextjs-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: parth-nextjs-app
          image: parthsinha18/parth-port-k8s:latest
          resources:
            requests:
              cpu: "250m"  # Initial baseline request
              memory: "256Mi"
            limits:
              cpu: "500m"  # Limit to prevent overconsumption
              memory: "512Mi
          ports:
            - containerPort: 3000
