k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: parth-port-k8s  # Renamed from parth-prod-k8s
  namespace: parth-port-k8s
spec:
  selector:
    app: parth-port-k8s
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
