k8s/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
   - host: kube.pksinha.co.uk
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: traefik-service
               port:
                 number: 80
